[build-system]
requires = ["setuptools>60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re2fractive"
version = "0.0.1"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "atomate2",
    "modnet",
    "jobflow",
    "optimade[http-client] @ git+https://github.com/Materials-Consortia/optimade-python-tools.git",
]

[project.optional-dependencies]
tests = [
    "pytest~=7.2",
    "pytest-cov~=4.0",
]

dev = [
    "ruff",
    "mypy",
    "pre-commit",
]


[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
target-version = "py310"
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
