[build-system]
requires = ["setuptools>60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re2fractive"
version = "0.0.1"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "atomate2 == 0.0.14",
    "modnet @ git+https://github.com/ppdebreuck/modnet@ml-evs/more-deps",  # replace with 0.4.2 when released
    "optimade[http-client] == 1.0.4",
    "matminer == 0.9.2",
    "pymatgen == 2024.3.1",
    "tensorflow ~= 2.11",
    "jobflow == 0.1.17",
    "tqdm",
]

[project.optional-dependencies]
tests = [
    "pytest ~= 8.0",
    "pytest-cov ~= 4.0",
]

dev = [
    "ruff",
    "mypy",
    "pre-commit",
]


[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
target-version = "py310"
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
