[build-system]
requires = ["setuptools>60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re2fractive"
version = "0.0.1"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "atomate2 == 0.0.14",
    "modnet == 0.4.3",
    "optimade[http-client] == 1.0.4",
    "matminer == 0.9.2",
    "pymatgen == 2024.3.1",
    "tensorflow-probability == 0.18.0",
    "jobflow == 0.1.17",
    "tqdm ~= 4.66",
    "mp-api ~= 0.41",
    "plotly ~= 5.20",
    "matplotlib ~= 3.4",
]

[project.scripts]
re2fractive = "re2fractive.cli:main"

[project.optional-dependencies]
tests = [
    "pytest ~= 8.0",
    "pytest-cov ~= 4.0",
]

dev = [
    "ruff",
    "mypy",
    "pre-commit",
]

pretrained = [
    "matgl ~= 1.0",
]


[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
